# sonarqube-lab-cicd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties  steps.md  wsgi.py
.github/workflows/: ci.yml  sonarqube-stage.yml
app/: __init__.py  config.py  extensions.py
app/docs/: __init__.py
app/models/: __init__.py  client.py  transaction.py
app/resources/: __init__.py  api.py  clients.py  health.py  transactions.py
app/schemas/: __init__.py  client.py  transaction.py
app/services/: __init__.py  client_service.py  exceptions.py  transaction_service.py
migrations/: README
src/: main.py
tests/: conftest.py  test_clients.py  test_transactions.py
