[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-crud-demo"
version = "0.1.0"
description = "Flask CRUD demo with clients and transactions"
authors = [{ name = "Flask Demo", email = "demo@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "Flask-SQLAlchemy>=3.1",
    "Flask-Migrate>=4.0",
    "Flask-RESTX>=1.3",
    "marshmallow>=3.20",
    "psycopg[binary]>=3.1",
    "gunicorn>=21.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "coverage>=7.4",
    "ruff>=0.3",
    "black>=24.4",
    "isort>=5.13",
    "pre-commit>=3.6",
    "httpx>=0.27",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
known_first_party = ["app"]
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP", "N", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
addopts = "-s --cov=app --cov-report=xml --cov-report=term"
testpaths = ["tests"]
